# hello-lib

./: CMakeLists.txt  README.md  hello-lib.spec
.github/workflows/: main.yml
src/: greet.cpp  greet.h
